package com.taobao.teaey.lostrpc;

option java_outer_classname = "LostProto";

option optimize_for = SPEED;
option java_generic_services = true;

message Packet {
    required int64 p_id = 1;
    required string service_name = 2;
    required string method_name = 4;
    required bytes data = 8;
    required int64 timestamp = 16;
}

message Login_C2S {
    required int64 timestamp = 1;
}

message Login_S2C {
    required int64 timestamp = 1;
}

service LoginService {
    rpc login (Login_C2S) returns (Login_S2C);
}

